# chatgpt-db-schema

./: .gitignore  README.md  pyproject.toml
frontend/: gradio_chatapp.py  streamlit_demo.py
idd_ai/: __init__.py  __main__.py  chat.py  chatgpt.py  config.py  contracts.py  prompts.py
idd_ai/frontend/: streamlit.py
idd_ai/plugins/: __init__.py  plugin.py  test_plugin.py
notebooks/: chatreview.ipynb
