[tool.poetry]
name = "idd-ai"
version = "0.1.0"
description = "Chatgpt API for commenting on database table column names, types, and descriptions."
authors = ["Emir Karamehmetoglu <ek2660@gmail.com>"]
license = "CC-BY-NC-SA"
readme = "README.md"
packages = [{include = "idd_ai"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
openai = "^0.27.2"
pydantic = "^1.10.6"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.254"
mypy = "^1.1.1"
isort = "^5.12.0"
black = "^23.1.0"
pytest = "^7.2.2"


[tool.poetry.group.notebook.dependencies]
ipykernel = "^6.21.3"


[tool.poetry.group.dashboard.dependencies]
streamlit = "^1.20.0"
gradio = "^3.21.0"
loguru = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
